<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/graph">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/como_te_sientes"
                android:textAlignment="center"/>

            <LinearLayout
                android:id="@+id/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_verySad"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_verysad"
                    android:background="@color/transparent"/>

                <ImageButton
                    android:id="@+id/btn_sad"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_sad"
                    android:background="@color/transparent"/>

                <ImageButton
                    android:id="@+id/btn_neutral"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_neutral"
                    android:background="@color/transparent"/>

                <ImageButton
                    android:id="@+id/btn_happy"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_happy"
                    android:background="@color/transparent"/>

                <ImageButton
                    android:id="@+id/btn_veryHappy"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_veryhappy"
                    android:background="@color/transparent"/>

            </LinearLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/guardar"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorAccent"/>

            <GridLayout
                android:id="@+id/bargraphs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:columnCount="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/muy_feliz"
                    android:textAlignment="center"/>

                <View
                    android:id="@+id/graphVeryHappy"
                    android:layout_width="250dp"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/feliz"
                    android:textAlignment="center"/>

                <View
                    android:id="@+id/grapHappy"
                    android:layout_width="250dp"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/neutral"
                    android:textAlignment="center"/>

                <View
                    android:id="@+id/graphNeutral"
                    android:layout_width="250dp"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/triste"
                    android:textAlignment="center"/>

                <View
                    android:id="@+id/graphTriste"
                    android:layout_width="250dp"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/muy_triste"
                    android:textAlignment="center"/>

                <View
                    android:id="@+id/graphMuyTriste"
                    android:layout_width="250dp"
                    android:layout_height="20dp"/>

            </GridLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>